<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_name"
        android:textSize="22sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="30dp"
        android:scrollbarAlwaysDrawHorizontalTrack="false">

        <LinearLayout
            android:layout_width="460dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <Button
                android:id="@+id/help_bt1"
                android:layout_marginTop="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_login"
                android:textSize="15sp"
                android:textColor="#000000"
                android:paddingLeft="2dp"
                android:paddingTop="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:drawableLeft="@drawable/help_icon"
                android:background="#00000000">
            </Button>
            <TextView
                android:id="@+id/help_text1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="20dp"
                android:text="@string/help_logindoc"
                android:textSize="15sp"
                android:typeface="monospace"/>

            <Button
                android:id="@+id/help_bt2"
                android:layout_marginTop="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_map"
                android:textSize="16sp"
                android:textColor="#000000"
                android:paddingLeft="2dp"
                android:paddingTop="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:drawableLeft="@drawable/help_icon"
                android:background="#00000000">
            </Button>
            <TextView
                android:id="@+id/help_text2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="20dp"
                android:text="@string/help_mapdoc"
                android:textSize="15sp"
                android:typeface="monospace" />

            <Button
                android:id="@+id/help_bt3"
                android:layout_marginTop="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_qr"
                android:textSize="16sp"
                android:textColor="#000000"
                android:paddingLeft="2dp"
                android:paddingTop="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:drawableLeft="@drawable/help_icon"
                android:background="#00000000">
            </Button>
            <TextView
                android:id="@+id/help_text3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="20dp"
                android:text="@string/help_qrdoc"
                android:textSize="15sp"
                android:typeface="monospace"/>

            <Button
                android:id="@+id/help_bt4"
                android:layout_marginTop="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_yuyin"
                android:textSize="16sp"
                android:textColor="#000000"
                android:paddingLeft="2dp"
                android:paddingTop="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:drawableLeft="@drawable/help_icon"
                android:background="#00000000">
            </Button>
            <TextView
                android:id="@+id/help_text4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="20dp"
                android:text="@string/help_yuyindoc"
                android:textSize="15sp"
                android:typeface="monospace" />

            <Button
                android:id="@+id/help_bt5"
                android:layout_marginTop="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_search"
                android:textSize="16sp"
                android:textColor="#000000"
                android:paddingLeft="2dp"
                android:paddingTop="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:drawableLeft="@drawable/help_icon"
                android:background="#00000000">
            </Button>
            <TextView
                android:id="@+id/help_text5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="20dp"
                android:text="@string/help_searchdoc"
                android:textSize="15sp"
                android:typeface="monospace"/>

            <Button
                android:id="@+id/help_bt6"
                android:layout_marginTop="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_setting"
                android:textSize="16sp"
                android:textColor="#000000"
                android:paddingLeft="2dp"
                android:paddingTop="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:drawableLeft="@drawable/help_icon"
                android:background="#00000000" />
            <TextView
                android:id="@+id/help_text6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="20dp"
                android:text="@string/help_settingdoc"
                android:textSize="15sp"
                android:typeface="monospace" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>