<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/about_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <!--Logo图片-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:id="@+id/imageView2" />
    <!--版本信息-->
    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/about01"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_below="@id/imageView2"
        android:typeface="sans" />
    <!--分割线-->
    <ImageView
        android:id="@+id/splip1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/colorline"
        android:layout_below="@id/tv"
        android:layout_marginTop="30dp"/>
    <!--intro-->
    <TextView
        android:id="@+id/tv2"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/about02"
        android:textSize="15dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/splip1"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:typeface="sans" />
    <!--分割线-->
    <ImageView
        android:id="@+id/splip2"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/colorline"
        android:layout_below="@id/tv2"
        android:layout_marginTop="20dp"/>
    <!--版权-->
    <TextView
        android:id="@+id/tv3"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/about03"
        android:textSize="15sp"
        android:layout_below="@id/splip2"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:typeface="sans"/>
</RelativeLayout>
